--- a/app/assets/stylesheets/module/red-btn.scss
+++ b/app/assets/stylesheets/module/red-btn.scss
@@ -10,6 +10,7 @@
   right: 25px;
   position: -webkit-sticky;
   position: sticky;
+  position: fixed;
   .placing {
     font-size: 22px;
     color: rgb(255, 255, 255);
