--- a/app/assets/stylesheets/module/red-btn.scss
+++ b/app/assets/stylesheets/module/red-btn.scss
@@ -13,10 +13,13 @@
     font-size: 22px;
     color: rgb(255, 255, 255);
   }
-  svg {
+  i.fa.fa-camera {
     margin: 8px 50px 0;
     width: 60px;
     height: 54px;
     color: rgb(255, 255, 255);
   }
+}
+a.red-btn {
+  text-decoration: none;
 }
