--- a/app/views/deviseGo/_option-birthYear.html.haml
+++ b/app/views/deviseGo/_option-birthYear.html.haml
@@ -1,6 +1,6 @@
-=form_with model: @user, local: true do |f| 
+= form_for @user, url: signup3_signup_index_path, method: :get do |f| 
   .select-parrent-cursor
-    =f.select :birthday_year, class:"birthYear" do
+    =f.select :birth_year, class:"birthYear" do
       %option --
       %option{:value => "1900"} 1900
       %option{:value => "1901"} 1901
@@ -125,7 +125,7 @@
       %option{:value => "2020"} 2020
   %p 年
   .select-parrent-cursor
-    =f.select :birthday_month, class:"birthMonth-info" do
+    =f.select :birth_month, class:"birthMonth-info" do
       %option{:value => ""} --
       %option{:value => "1"} 1
       %option{:value => "2"} 2
@@ -141,7 +141,7 @@
       %option{:value => "12"} 12
   %p 月
   .select-parrent-cursor
-    =f.select :birthday_day, class:"birthDay-info" do
+    =f.select :birth_day, class:"birthDay-info" do
       %option{:value => ""} --
       %option{:value => "1"} 1
       %option{:value => "2"} 2
