--- a/app/views/signup/signup2.html.haml
+++ b/app/views/signup/signup2.html.haml
@@ -43,7 +43,7 @@
     .info-top
       %h2
         会員情報入力
-    =form_with model: @user, local: true do |f| 
+    = form_for @user, url: signup3_signup_index_path, method: :get do |f|
       .formbox
         .form-group
           %label.nickname-new
@@ -112,7 +112,7 @@
             =link_to "利用規約", "https://www.mercari.com/jp/tos_list/", class: "link-for-user"
             に同意したものとみなします
         =link_to signup3_signup_index_path do
-          =f.button "次へ進む", class: "go-ahead"
+          =f.submit "次へ進む", class: "go-ahead"
         =link_to "https://www.mercari.com/jp/help_center/article/423/", class: "link-for-user-info" do
           本人情報の登録について
           =fa_icon'chevron-right'
