--- a/app/views/signup/signup2.html.haml
+++ b/app/views/signup/signup2.html.haml
@@ -47,22 +47,22 @@
       .formbox
         .form-group
           %label.nickname-new
-            ニックネーム
+            = f.label :ニックネーム
           %span.must-content
             必須
-          = f.text_field :nickname, class:"nickname-info", placeholder: "例) メルカリ太郎"
+          = f.text_field :nickname, class:"nickname-info", value: "", placeholder: "例) メルカリ太郎"
         .form-group
           %label.mailAddless-new
             メールアドレス
           %span.must-content
             必須
-          = f.text_field :email, class:"mailAddless-info", placeholder: "PC・携帯どちらでも可"
+          = f.text_field :email, class:"mailAddless-info", value: "", placeholder: "PC・携帯どちらでも可"
         .form-group
           %label.password-new
             パスワード
           %span.must-content
             必須
-          = f.text_field :password, class:"password-info", placeholder: "7文字以上"
+          = f.text_field :password, class:"password-info", value: "", placeholder: "7文字以上"
           .check-box
             %label.checkbox
               %input.password-check{type: "checkbox"}
@@ -78,16 +78,16 @@
           %span.must-content
             必須
           .input-parrent
-            = f.text_field :last_name, class: "kanji1stName-info", placeholder: "例) 山田"
-            = f.text_field :first_name, class: "kanji2ndName-info", placeholder: "例) 彩"
+            = f.text_field :last_name, class: "kanji1stName-info", value: "", placeholder: "例) 山田"
+            = f.text_field :first_name, class: "kanji2ndName-info", value: "" , placeholder: "例) 彩"
         .form-group
           %label.kanaName-new
             お名前(全角) 
           %span.must-content
             必須
           .input-parrent
-            = f.text_field :last_name_kana, class: "kana1stName-info", placeholder: "例) ヤマダ"
-            = f.text_field :first_name_kana, class: "kana2ndName-info", placeholder: "例) アヤ"
+            = f.text_field :last_name_kana, class: "kana1stName-info", value: "" , placeholder: "例) ヤマダ"
+            = f.text_field :first_name_kana, class: "kana2ndName-info", value: "" , placeholder: "例) アヤ"
         .form-group
           %label.birthday-new
             生年月日 
@@ -111,8 +111,8 @@
             「次へ進む」のボタンを押すことにより、
             =link_to "利用規約", "https://www.mercari.com/jp/tos_list/", class: "link-for-user"
             に同意したものとみなします
-        =link_to signup3_signup_index_path do
-          =f.submit "次へ進む", class: "go-ahead"
+          -# =link_to signup3_signup_index_path do
+          = f.submit "次へ進む", class: "go-ahead"
         =link_to "https://www.mercari.com/jp/help_center/article/423/", class: "link-for-user-info" do
           本人情報の登録について
           =fa_icon'chevron-right'
