微修正追加

--- a/app/views/deviseGo/_option-birthMonth.html.haml
+++ b/app/views/deviseGo/_option-birthMonth.html.haml
@@ -1,4 +1,4 @@
-=form_with model: @user, local: true do |f| 
+=form_with model: @user, url: signup3_signup_index_path, local: true do |f|
   =f.select class: "birthMonth-info" do
     %option{:value => ""} --
     %option{:value => "1"} 1
