--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -26,7 +26,7 @@
               .main-contents-box
                 =link_to root_path, class: "contents-item" do
                   .contents-item__image
-                    = product.image
+                    = image_tag product.image_url 
                     .contents-item__image--price
                       %span= product.price
                   .contents-item__index
