--- a/app/views/signup/signup5.html.haml
+++ b/app/views/signup/signup5.html.haml
@@ -41,7 +41,7 @@
       %h2 支払い方法
     .credit-box__body
       .push-box
-        = form_for @user, url: done_signup_index_path, method: :post do |f|
+        = form_for @user, url: signup_index_path, method: :post do |f|
           .formbox
             .form-group-credit
               %label.yubinNum-new
