--- a/app/assets/stylesheets/user/profile.scss
+++ b/app/assets/stylesheets/user/profile.scss
@@ -26,6 +26,7 @@
         width: 100%;
         display: inline-flex;
         justify-content: center;
+        background-color: lightgray;
         .icon-image{
           .prof-photo{
             border-radius: 50%;
