--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -45,6 +45,19 @@
                   .select-box
                     = f.select class: "select-default" do
                       %option{selected: "selected"} --
+                      %option{selected: "selected"} レディース
+                      %option{selected: "selected"} メンズ
+                      %option{selected: "selected"} ベビー・キッズ
+                      %option{selected: "selected"} インテリア・住まい・小物
+                      %option{selected: "selected"} 本・音楽・ゲーム
+                      %option{selected: "selected"} おもちゃ・ホビー・グッズ
+                      %option{selected: "selected"} コスメ・香水・美容
+                      %option{selected: "selected"} 家電・スマホ・カメラ
+                      %option{selected: "selected"} スポーツ・レジャー
+                      %option{selected: "selected"} ハンドメイド
+                      %option{selected: "selected"} チケット
+                      %option{selected: "selected"} 自動車・オートバイ
+                      %option{selected: "selected"} その他
                     %i.fas.fa-republican
                 .condition
                   .condition__nav
@@ -53,6 +66,12 @@
                   %i.fas.fa-republican
                     = f.select :condition, class: "select-default" do
                       %option{selected: "selected"} --
+                      %option{selected: "selected"} 新品、未使用
+                      %option{selected: "selected"} 未使用に近い
+                      %option{selected: "selected"} 目立った傷や汚れなし
+                      %option{selected: "selected"} やや傷や汚れあり
+                      %option{selected: "selected"} 傷や汚れあり
+                      %option{selected: "selected"} 全体的に状態が悪い
                     .product-details
             .product-transportation
               -# ↑追加
@@ -68,6 +87,10 @@
                   %i.fas.fa-republican
                   = f.select :shipping_charge, class: "select-default" do
                     %option{selected: "selected"} --
+                    %option{selected: "selected"} 送料込み(出品者負担)
+                    %option{selected: "selected"} 着払い(購入者負担)
+                    %option{selected: "selected"} Me
+                    %option{selected: "selected"} You
                 .transportation-name
                   %label 発送元の地域
                   .require
@@ -76,6 +99,55 @@
                   %i.fas.fa-republican
                   = f.select :shipping_place, class: "select-default" do
                     %option{selected: "selected"} --
+                    %option{selected: "selected"} 仏悠介
+                    %option{selected: "selected"} 北海道
+                    %option{selected: "selected"} 青森県
+                    %option{selected: "selected"} 岩手県
+                    %option{selected: "selected"} 宮城県
+                    %option{selected: "selected"} 秋田県
+                    %option{selected: "selected"} 山形県
+                    %option{selected: "selected"} 福島県
+                    %option{selected: "selected"} 茨城県
+                    %option{selected: "selected"} 栃木県
+                    %option{selected: "selected"} 群馬県
+                    %option{selected: "selected"} 埼玉県
+                    %option{selected: "selected"} 千葉県
+                    %option{selected: "selected"} 東京都
+                    %option{selected: "selected"} 神奈川県
+                    %option{selected: "selected"} 新潟県
+                    %option{selected: "selected"} 富山県
+                    %option{selected: "selected"} 石川県
+                    %option{selected: "selected"} 福井県
+                    %option{selected: "selected"} 山梨県
+                    %option{selected: "selected"} 長野県
+                    %option{selected: "selected"} 岐阜県
+                    %option{selected: "selected"} 静岡県
+                    %option{selected: "selected"} 愛知県
+                    %option{selected: "selected"} 三重県
+                    %option{selected: "selected"} 滋賀県
+                    %option{selected: "selected"} 京都府
+                    %option{selected: "selected"} 大阪府
+                    %option{selected: "selected"} 兵庫県
+                    %option{selected: "selected"} 奈良県
+                    %option{selected: "selected"} 和歌山県
+                    %option{selected: "selected"} 鳥取県
+                    %option{selected: "selected"} 島根県
+                    %option{selected: "selected"} 岡山県
+                    %option{selected: "selected"} 広島県
+                    %option{selected: "selected"} 山口県
+                    %option{selected: "selected"} 徳島県
+                    %option{selected: "selected"} 香川県
+                    %option{selected: "selected"} 愛媛県
+                    %option{selected: "selected"} 高知県
+                    %option{selected: "selected"} 福岡県
+                    %option{selected: "selected"} 佐賀県
+                    %option{selected: "selected"} 長崎県
+                    %option{selected: "selected"} 熊本県
+                    %option{selected: "selected"} 大分県
+                    %option{selected: "selected"} 宮崎県
+                    %option{selected: "selected"} 鹿児島県
+                    %option{selected: "selected"} 沖縄県
+                    
                 .transportation-name
                   %label 発送までの日数
                   .require
@@ -83,6 +155,9 @@
                 .select-box
                   = f.select :shipping_date, class: "select-default" do
                     %option{selected: "selected"} --
+                    %option{selected: "selected"} 1~2日で発送
+                    %option{selected: "selected"} 2~3日で発送
+                    %option{selected: "selected"} 4~7日で発送
                 -# 合わせてCSSを適応するためクラス名を統一
             .price
               .price__nav
