--- a/app/views/signup/signup2.html.haml
+++ b/app/views/signup/signup2.html.haml
@@ -50,7 +50,7 @@
             = f.label :ニックネーム
           %span.must-content
             必須
-          = f.text_field :nickname, class:"nickname-info", value: "", placeholder: "例) メルカリ太郎"
+          = f.text_field :nickname, class:"nickname-info", value: "", placeholder: "例) メルカリ太郎", maxlength: "20"
         .form-group
           %label.mailAddless-new
             メールアドレス
@@ -74,12 +74,12 @@
             安心・安全にご利用いただくために、お客さまの本人情報の登録にご協力ください。他のお客さまに公開されることはありません。
         .form-group
           %label.kanjiName-new
-            お名前(全角) 
+            お名前(全角)
           %span.must-content
             必須
           .input-parrent
-            = f.text_field :last_name, class: "kanji1stName-info", value: "", placeholder: "例) 山田"
-            = f.text_field :first_name, class: "kanji2ndName-info", value: "" , placeholder: "例) 彩"
+            = f.text_field :last_name, class: "kanji1stName-info", value: "", placeholder: "例) 山田", maxlength: "20"
+            = f.text_field :first_name, class: "kanji2ndName-info", value: "" , placeholder: "例) 彩", maxlength: "20"
         .form-group
           %label.kanaName-new
             お名前(全角) 
