--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -43,21 +43,21 @@
                     .require 必須
                     -# カテゴリーカラムに追加⬇️
                   .select-box
-                    = f.select class: "select-default" do
-                      %option{selected: "selected"} --
-                      %option{selected: "selected"} レディース
-                      %option{selected: "selected"} メンズ
-                      %option{selected: "selected"} ベビー・キッズ
-                      %option{selected: "selected"} インテリア・住まい・小物
-                      %option{selected: "selected"} 本・音楽・ゲーム
-                      %option{selected: "selected"} おもちゃ・ホビー・グッズ
-                      %option{selected: "selected"} コスメ・香水・美容
-                      %option{selected: "selected"} 家電・スマホ・カメラ
-                      %option{selected: "selected"} スポーツ・レジャー
-                      %option{selected: "selected"} ハンドメイド
-                      %option{selected: "selected"} チケット
-                      %option{selected: "selected"} 自動車・オートバイ
-                      %option{selected: "selected"} その他
+                    -# = f.select class: "select-default" do
+                    -#   %option{selected: "selected"} --
+                    -#   %option{selected: "selected"} レディース
+                    -#   %option{selected: "selected"} メンズ
+                    -#   %option{selected: "selected"} ベビー・キッズ
+                    -#   %option{selected: "selected"} インテリア・住まい・小物
+                    -#   %option{selected: "selected"} 本・音楽・ゲーム
+                    -#   %option{selected: "selected"} おもちゃ・ホビー・グッズ
+                    -#   %option{selected: "selected"} コスメ・香水・美容
+                    -#   %option{selected: "selected"} 家電・スマホ・カメラ
+                    -#   %option{selected: "selected"} スポーツ・レジャー
+                    -#   %option{selected: "selected"} ハンドメイド
+                    -#   %option{selected: "selected"} チケット
+                    -#   %option{selected: "selected"} 自動車・オートバイ
+                    -#   %option{selected: "selected"} その他
                     %i.fas.fa-republican
                 .condition
                   .condition__nav
