--- a/app/assets/stylesheets/user/_side-barMypage.scss
+++ b/app/assets/stylesheets/user/_side-barMypage.scss
@@ -13,7 +13,7 @@
     margin: 0 40px 0 0;
     ul.sidebar-list-1{
       display: block;
-      li{
+      li.side-bar-links{
         border-bottom:solid 1px #EEEEEE;
         position: relative;
         display: flex;
