--- a/app/views/layouts/_side-barMypage.html.haml
+++ b/app/views/layouts/_side-barMypage.html.haml
@@ -19,7 +19,7 @@
         .icon
           =fa_icon'chevron-right'
       %li.side-bar-links
-        出品する
+        = link_to "出品する", new_product_path, class: "side-link-text"
         .icon
           =fa_icon'chevron-right'
       %li.side-bar-links
