クレジット view修正

--- a/app/views/signup/signup5.html.haml
+++ b/app/views/signup/signup5.html.haml
@@ -41,15 +41,14 @@
       %h2 支払い方法
     .credit-box__body
       .push-box
-        = form_for @user, url: pay_card_index, method: :post do |f|
+        = form_for @card, url: pay_card_index, method: :post do |f|
           .formbox
             .form-group-credit
               %label.yubinNum-new
                 カード番号
               %span.must-content
                 必須
-              //クレジット番号のカラム名を商品購入実装の際に追加してください
-              = f.text_field class:"yubinNum-info", value: "", placeholder: "半角数字のみ"
+               = f.text_field "number", "", maxlength: "16", type: "text", id: "card_number", value: "", placeholder: "半角数字のみ"
               =image_tag "credit/iconfinder_visa-straight_38613.png"
               =image_tag "credit/iconfinder_mastercard-straight_38603.png"
               =image_tag "credit/iconfinder_american-express-straight_38591.png"
@@ -60,13 +59,13 @@
               %span.must-content
                 必須
               .select-parrent
-                =render "deviseGo/option-birthMonth"
+                =render "deviseGo/option-card"
             .form-group-credit
               %label.municipality-new
                 セキュリティコード
               %span.must-content
                 必須
-              = f.text_field class: "password-info", placeholder: "カード背面4桁もしくは3桁の番号"
+              = f.text_field "cvc", "", maxlength: "4", id: "cvc", placeholder: "カード背面4桁もしくは3桁の番号"
             = f.submit "次へ進む", class: "go-ahead"
             =link_to "", class: "link-for-user-info" do
               カード裏面の番号とは？
