--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -9,7 +9,7 @@
           = link_to ""
           .icon
             =image_tag "/ramen.jpg"
-          %h2.nickname= @users.nickname 
+          %h2.nickname= @nickname 
           .records
             .value
               評価
