--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -50,7 +50,7 @@
                 .count
 
             %li.like-list
-              = link_to mypage_user_page_path, class: "menu-link" do
+              = link_to user_path(current_user.id), class: "menu-link" do
                 %figure
                   .peace
                     = image_tag "SVG/logo_gray.svg"
