--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -19,7 +19,7 @@
             .th
               .th__name 出品者
             .td
-              = link_to "user-name", root_path
+              = link_to @product.user.nickname, user_path(current_user.id)
               .user-evaluation
                 .item-user-ratings
                   %i.fa.fa-smile-o
