before-action-added

--- a/app/views/mypage/logout.html.haml
+++ b/app/views/mypage/logout.html.haml
@@ -5,6 +5,6 @@
     %form
       =link_to "ログアウト", destroy_user_session_path, method: :delete, class: "logout-btn" 
 
-    = render "layouts/side-barMypage"
+    -# = render "layouts/side-barMypage"
 
   = render "layouts/footer"
