--- a/app/views/signup/signup5.html.haml
+++ b/app/views/signup/signup5.html.haml
@@ -66,7 +66,7 @@
               %span.must-content
                 必須
               = f.text_field :cvc, maxlength: "4", id: "cvc", placeholder: "カード背面4桁もしくは3桁の番号"
-            = f.submit "次へ進む", class: "go-ahead"
+            = f.submit "次へ進む", class: "go-ahead", id: "token_submit"
             =link_to "", class: "link-for-user-info" do
               カード裏面の番号とは？
               =fa_icon'chevron-right'
