--- a/app/views/layouts/_side-barMypage.html.haml
+++ b/app/views/layouts/_side-barMypage.html.haml
@@ -23,7 +23,7 @@
         .icon
           =fa_icon'chevron-right'
       %li.side-bar-links
-        = link_to "出品した商品-出品中", user_path, class: "side-link-text"
+        = link_to "出品した商品-出品中", users_path, class: "side-link-text"
         .icon
           =fa_icon'chevron-right'
       %li.side-bar-links
