--- a/app/views/signup/signup5.html.haml
+++ b/app/views/signup/signup5.html.haml
@@ -48,7 +48,7 @@
                 カード番号
               %span.must-content
                 必須
-              = f.text_field :number, maxlength: "16", type: "text", id: "card_number", value: "", placeholder: "半角数字のみ"
+              = f.text_field :number, maxlength: "16", type: "text", id: "card_number",  placeholder: "半角数字のみ"
               =image_tag "credit/iconfinder_visa-straight_38613.png"
               =image_tag "credit/iconfinder_mastercard-straight_38603.png"
               =image_tag "credit/iconfinder_american-express-straight_38591.png"
