--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,3 +27,4 @@
 @import "product/product-details";
 @import "product/product-placing-page";
 @import "module/red-btn";
+@import "user/my-product";
