--- a/app/views/products/my_product_detail.html.haml
+++ b/app/views/products/my_product_detail.html.haml
@@ -33,7 +33,7 @@
                 .th__name カテゴリー
               .td
                 %li
-                  =link_to "レディース", root_path
+                  =link_to @product.category, root_path
                 %li
                   =link_to "> バッグ", root_path, class: "item-detail-table-sub-category"
                 %li
@@ -46,26 +46,27 @@
             .tr
               .th
                 .th__name 商品の状態
-              .td 未使用に近い
+              .td= @product.condition
             .tr
               .th
                 .th__name 配送料の負担
-              .td 送料込み(出品者負担)
+              .td= @product.shipping_charge
             .tr
               .th
                 .th__name 配送の方法
-              .td らくらくメルカリ便
+              .td= @product.shipping_how
             .tr
               .th
                 .th__name 配送元地域
-              .td 未定
+              .td= @product.shipping_place
             .tr
               .th
                 .th__name 発送日の目安
-              .td 1~2日で発送
+              .td= @product.shipping_date
       .item__price
         .price-box
-          ¥1,300
+          ¥
+          %span= @product.price
         .price-tax
           .price-tax__content (税込)
         .price-fee
@@ -73,15 +74,17 @@
       -# = link_to “購入画面に進む“, root_path, class: “item__buy-btn”
       %p.allowed-message
       .item__description
-        商品の説明です
+        %span= @product.text
     .product-rails
-      = link_to root_path, class: "btn-default edit-btn" do
+      = link_to edit_product_path, class: "btn-default edit-btn", method: :get do
         商品の編集
       %p.text-align-center or
       = form_with model: @product, local: true, class: "just-wait" do |f|
         %input{name: "value", type: "hidden", value: ""}/
-        %button.btn-default.stop{type: "submit"} 出品の一旦停止
-      %button.btn-default.delete-item 商品を削除する
+        = link_to product_path, class: "btn-default stop" do
+          出品の一旦停止
+      = link_to product_path, class: "btn-default delete-item", method: :delete do
+        商品を削除する
     .message
       .message__contents
         .message-items
