--- a/app/views/products/my_product_detail.html.haml
+++ b/app/views/products/my_product_detail.html.haml
@@ -80,8 +80,10 @@
       %p.text-align-center or
       = form_with model: @product, local: true, class: "just-wait" do |f|
         %input{name: "value", type: "hidden", value: ""}/
-        = link_to product_path, class: "btn-default stop" do 出品の一旦停止
-      = link_to product_path, class: "btn-default delete-item", method: :delete do 商品を削除する
+        = link_to product_path, class: "btn-default stop" do
+          出品の一旦停止
+      = link_to product_path, class: "btn-default delete-item", method: :delete do
+        商品を削除する
     .message
       .message__contents
         .message-items
