--- a/app/views/layouts/signup1.html.haml
+++ b/app/views/layouts/signup1.html.haml
@@ -32,7 +32,7 @@
                   %li.text
                     メールアドレスで登録する
               %ul.main-bottom-box__textBox-facebook
-                = link_to '#', class:'link-fb' do
+                = link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path, class:'link-fb' do
                   =fa_icon 'facebook-square'
                   %li.text
                     Facebookで登録する
