--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -1,3 +1,11 @@
+- if @product.errors.any?
+  #error_explanation
+    %h2
+      = @product.errors.count
+      件のエラーがあります。
+    %ul
+      - @product.errors.full_messages.each do |msg|
+        %li= msg
 .body  
   = render "devise/shared/header-login"
   .container
@@ -20,7 +28,7 @@
                 %p
                   またはクリックしてファイルをアップロード
           .product-contents
-            .product-name 
+            .product-name
               .product-name-header
                 -# ↑追加
                 %label 商品名
