--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -1,3 +1,11 @@
+- if @product.errors.any?
+  #error_explanation
+    %h2
+      = @product.errors.count
+      件のエラーがあります。
+    %ul
+      - @product.errors.full_messages.each do |msg|
+        %li= msg
 .body  
   = render "devise/shared/header-login"
   .container
