--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -203,7 +203,8 @@
                   また、出品をもちまして
                   = link_to "加盟店規約", "https://www.mercari.com/jp/seller_terms/"
                   に同意したことになります。
-              .sell-btn
-                = f.submit "変更する", class: "submit-button"
-              = link_to "もどる", myproduct_product_path, class: "back-btn"
+              - if user_signed_in? && current_user.id == @product.user_id
+                .sell-btn
+                  = f.submit "変更する", class: "submit-button"
+                = link_to "もどる", myproduct_product_path, class: "back-btn"
   = render "devise/shared/footer-login"
