--- a/app/views/products/my_product_detail.html.haml
+++ b/app/views/products/my_product_detail.html.haml
@@ -75,20 +75,20 @@
           .price-tax__content (税込)
         .price-fee
           .price-fee__content 送料込み
-      -# = link_to “購入画面に進む“, root_path, class: “item__buy-btn”
       %p.allowed-message
       .item__description
         %span= @product.text
-    .product-rails
-      = link_to edit_product_path, class: "btn-default edit-btn", method: :get do
-        商品の編集
-      %p.text-align-center or
-      = form_with model: @product, local: true, class: "just-wait" do |f|
-        %input{name: "value", type: "hidden", value: ""}/
-        = link_to product_path, class: "btn-default stop" do
-          出品の一旦停止
-      = link_to product_path, class: "btn-default delete-item", method: :delete do
-        商品を削除する
+    - if user_signed_in? && current_user.id == @product.user_id
+      .product-rails
+        = link_to edit_product_path, class: "btn-default edit-btn", method: :get do
+          商品の編集
+        %p.text-align-center or
+        = form_with model: @product, local: true, class: "just-wait" do |f|
+          %input{name: "value", type: "hidden", value: ""}/
+          = link_to product_path, class: "btn-default stop" do
+            出品の一旦停止
+        = link_to product_path, class: "btn-default delete-item", method: :delete do
+          商品を削除する
     .message
       .message__contents
         .message-items
