--- a/app/views/products/my_product_detail.html.haml
+++ b/app/views/products/my_product_detail.html.haml
@@ -80,7 +80,7 @@
         %span= @product.text
     - if user_signed_in? && current_user.id == @product.user_id
       .product-rails
-        = link_to edit_product_path, class: "btn-default edit-btn", method: :get do
+        = link_to edit_product_path, class: "btn-default edit-btn" do
           商品の編集
         %p.text-align-center or
         = form_with model: @product, local: true, class: "just-wait" do |f|
