--- a/app/views/layouts/_side-barMypage.html.haml
+++ b/app/views/layouts/_side-barMypage.html.haml
@@ -62,22 +62,22 @@
       メルペイ
     %ul.sidebar-list-1
       %li.side-bar-links
-        = link_to '売上・振込申請', mypage_profile_path, class: "side-link-text"
+        = link_to '売上・振込申請', profile_user_path, class: "side-link-text"
         .icon
           =fa_icon'chevron-right'
       %li.side-bar-links
-        = link_to 'ポイント', mypage_profile_path, class: "side-link-text"
+        = link_to 'ポイント', profile_user_path, class: "side-link-text"
         .icon
           =fa_icon'chevron-right'
     %h3
       設定
     %ul.sidebar-list-1
       %li.side-bar-links
-        = link_to 'プロフィール', mypage_profile_path, class: "side-link-text"
+        = link_to 'プロフィール', profile_user_path, class: "side-link-text"
         .icon
           =fa_icon'chevron-right'
       %li.side-bar-links
-        = link_to '発送元・お届け先住所変更', mypage_user_info_register_path, class: "side-link-text"
+        = link_to '発送元・お届け先住所変更', user_info_register_user_path, class: "side-link-text"
         .icon
           =fa_icon'chevron-right'
       %li.side-bar-links
@@ -85,18 +85,18 @@
         .icon
           =fa_icon'chevron-right'
       %li.side-bar-links
-        = link_to 'メール/パスワード', mypage_user_info_register_path, class: "side-link-text"
+        = link_to 'メール/パスワード', user_info_register_user_path, class: "side-link-text"
         .icon
           =fa_icon'chevron-right'
       %li.side-bar-links
-        = link_to '本人情報', mypage_user_info_register_path, class: "side-link-text"
+        = link_to '本人情報', user_info_register_user_path, class: "side-link-text"
         .icon
           =fa_icon'chevron-right'
       %li.side-bar-links
-        = link_to '電話番号の確認', mypage_user_info_register_path, class: "side-link-text"
+        = link_to '電話番号の確認', user_info_register_user_path, class: "side-link-text"
         .icon
           =fa_icon'chevron-right'
       %li.side-bar-links
-        = link_to 'ログアウト', mypage_logout_path, class: "side-link-text"
+        = link_to 'ログアウト',  logout_user_path, class: "side-link-text"
         .icon
           =fa_icon'chevron-right'
