商品出品停止中実装

--- a/app/assets/stylesheets/user/_my-product.scss
+++ b/app/assets/stylesheets/user/_my-product.scss
@@ -150,7 +150,16 @@
         background: #ea352d;
         border: 1px solid #ea352d;
         text-decoration: none;
-  
+      }
+      input.btn-default.stop {
+        background: gray;
+        border: 1px solid gray;
+        text-decoration: none;
+      }
+      input.btn-default.restart {
+        background: #ea352d;
+        border: 1px solid #ea352d;
+        text-decoration: none;
       }
       p.text-align-center {
         text-align: center;
