Dec_8　変更（サイドバー、プロフィール、本人情報）
# what
サイドバーのリンククリック範囲をli全体に拡大
プロフィールの編集機能実装
本人情報の編集機能実装

# why
ユーザビリティの向上

# ＜共通箇所：変更ファイル＞
mixin (long btn追加)
side_bar
userモデル
userコントローラー

--- a/app/assets/stylesheets/module/_mixin-signup.scss
+++ b/app/assets/stylesheets/module/_mixin-signup.scss
@@ -47,6 +47,20 @@
     transition: 1.0s;
   }
 }
+@mixin submit-btn-long{
+  margin-top:40px;
+  background-color: #ea352d;
+  color: white;
+  width: 572px;
+  height: 50px;
+  font-size: 14px;
+  cursor: pointer;
+  &:hover{
+    background-color: rgb(221, 16, 16);
+    transition: 1.0s;
+  }
+}
+
 //青文字リンクのデザイン
 @mixin blue-line{
   color: rgb(0, 162, 255);
