--- a/app/assets/stylesheets/user/profile.scss
+++ b/app/assets/stylesheets/user/profile.scss
@@ -56,14 +56,8 @@
         background: #fff;
         font-size: 16px;
     }
-    button{
-      margin: 16px 0 0;
-      width: 100%;
-      line-height: 48px;
-      font-size: 14px;
-      background: #ea352d;
-      color: #fff;
-      text-align: center;
+    .button{
+      @include submit-btn-long;
     }
     }
     }
