--- a/app/assets/stylesheets/user/user_info_register.scss
+++ b/app/assets/stylesheets/user/user_info_register.scss
@@ -8,6 +8,7 @@
     display:inline-block;
     position: relative;
     .info_contents{
+      text-align: left;
       width: 700px;
       float:right;
       background-color: #fff;
@@ -18,7 +19,7 @@
         font-size: 24px;
         border-bottom: 1px solid #f5f5f5;
       }
-      .single-inner{
+      .edit_user{
         text-align: left;
         padding: 64px;
         .info_content{
@@ -51,7 +52,7 @@
           .input-default{
             font-weight: normal;
             display: block;
-            width: 100%;
+            width: 540px;
             padding: 10px 16px 8px;
             border-radius: 4px;
             border: 1px solid #ccc;
@@ -60,7 +61,6 @@
             font-size: 16px;
             margin-top: 8px;
             }
-      }
               .select-default{
                 height: 48px;
                 width: 76px;
@@ -68,6 +68,22 @@
                 font-weight: none;
                 border: 1px solid #ccc;
               }
+          .pre-wrap{
+            width: 100%;
+          #user_prefectures{
+            height: 48px;
+            font-weight: normal;
+            display: block;
+            width: 100%;
+            padding-left: 16px;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+            background: #fff;
+            line-height: 1.5;
+            font-size: 16px;
+            margin-top: 8px;
+          }
+        }
       span{
         margin: 0 2px;
         left: 100px;
@@ -76,9 +92,8 @@
         color: #0099e8;
         text-decoration: none;
         }
-      }
       .form-info-text{
-        font-weight: none;
+        font-weight: normal;
         margin: 8px 0 0;
         color: #888;
         font-size: 15px;
@@ -94,31 +109,16 @@
         .select-wrap{
           background-color: #fff;
           margin: 8px 0 0;
+          font-weight: normal;
         }
-
-      .btn-default.btn-red{
-        margin: 40px 0 0 0;
-        background: #ea352d;
-        border: 1px solid #ea352d;
-        color: #fff;
-        display: block;
-        width: 608px;
-        line-height: 48px;
-        font-size: 14px;
-        border: 1px solid transparent;
-        -webkit-transition: all ease-out .3s;
-        transition: all ease-out .3s;
-        text-align: center;
       }
-      .register{
-        text-align: right;
-        color: #0099e8;
-        text-decoration: none;
-      }
+        .btn-red{
+          @include submit-btn-long;
+        }
     }
   }
   }
-
+}
 
 @media screen and (max-width:1100px){
   .user_info_register{
