--- a/app/views/products/myproduct.html.haml
+++ b/app/views/products/myproduct.html.haml
@@ -35,7 +35,7 @@
                           %i.far.fa-comment
                           %span.many
                             1
-                        .mode
+                        .product-mode
                           出品中
                       %i.fas.fa-arrow-circle-right
         %ul.mypage-kaminari
