出品ボタン追加

--- a/app/views/users/profile.html.haml
+++ b/app/views/users/profile.html.haml
@@ -18,3 +18,4 @@
           = f.submit "変更する", class: "button"
     = render "layouts/side-barMypage"
 = render "layouts/footer"
+= render "devise/shared/red-btn"
