テスト追加

--- a/app/views/signup/signup2.html.haml
+++ b/app/views/signup/signup2.html.haml
@@ -62,7 +62,7 @@
             パスワード
           %span.must-content
             必須
-          = f.text_field :password, class:"password-info", value: "", placeholder: "7文字以上"
+          = f. :password, class:"password-info", value: "", placeholder: "7文字以上"
           .check-box
             %label.checkbox
               %input.password-check{type: "checkbox"}
