支払い方法リンク追加

--- a/app/views/layouts/_side-barMypage.html.haml
+++ b/app/views/layouts/_side-barMypage.html.haml
@@ -115,10 +115,12 @@
             発送元・お届け先住所変更
           .icon
             =fa_icon'chevron-right'
-      %li.side-bar-links
-        支払い方法
-        .icon
-          =fa_icon'chevron-right'
+      = link_to "",class: "side-link-text" do
+        %li.side-bar-links
+          .side-link-text
+            支払い方法
+          .icon
+            =fa_icon'chevron-right'
       = link_to "",class: "side-link-text" do
         %li.side-bar-links
           .side-link-text
