--- a/app/assets/stylesheets/products/_myproduct.scss
+++ b/app/assets/stylesheets/products/_myproduct.scss
@@ -88,7 +88,7 @@ body {
                       max-height: 4.4em;
                       line-height: 1.5;
                     }
-                    &__accesory {
+                    &__accessory {
                       span.liking-count {
                         vertical-align: 2px;
                         margin: 0 6px 0 0;
